# pidog-ros2

./: .gitattributes  .gitignore  =1.3.13  LICENSE  README.md
gazebo/worlds/: building_robot.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/interfaces/share/interfaces/: local_setup.sh  package.sh  package.xml
install/interfaces/share/interfaces/action/: Movement.idl
install/interfaces/share/interfaces/cmake/: rosidl_cmake-extras.cmake
install/interfaces/share/interfaces/srv/: ComponentStatus.idl
log/: latest_build
pidog_ws/install/: local_setup.sh  setup.sh
pidog_ws/log/: latest_build
pidog_ws/src/interfaces/: CMakeLists.txt  package.xml
pidog_ws/src/vision/: package.xml  setup.py
src/brain/: package.xml  setup.py
src/brain/brain/: brain_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Stand.action
src/interfaces/py/: _legs_s.ep.rosidl_typesupport_c.c  _legs_s.ep.rosidl_typesupport_fastrtps_c.c  _legs_s.ep.rosidl_typesupport_introspection_c.c
src/legs/: package.xml  setup.py
src/legs/launch/: legs.launch.py  legs_launch.py
src/legs/legs/: legs_action_client.py  legs_action_server.py  legs_node.py
src/model/: CMakeLists.txt  README.md  package.xml  setup.py
src/model/launch/: demo.launch.py  display.launch.py
src/model/meshes/: REMIX_small_spacer.stl  femur.dae  left_tibia.dae  quadruped_left_leg.dae  quadruped_remix.dae  (+2 more)
src/test_dummy_export_1_description/: CMakeLists.txt  package.xml
src/urdf_tutorial_r2d2/: package.xml  setup.py
startup/: init.sh  ros-install.sh
(+185 files in other folders)
